Se agrega suma de la cantidad total

--- a/alneira/clase9-1/src/main/resources/templates/compras.html
+++ b/alneira/clase9-1/src/main/resources/templates/compras.html
@@ -27,6 +27,13 @@
                 <td th:text="${compras.cantidad}"/>
                 <td th:text="${compras.cantidad} * ${compras.montoUnitario}"/>
             </tr>
+            <tr>
+                <th>Total</th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th th:text="${total}" />
+            </tr>
         </table>
     </form>
 </body>
